--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             <div class="about-content">
                 <div class="about-image" data-aos="fade-right">
                     <!-- EDIT: Replace src with your actual photo -->
-                    <img src="https://scontent.fktm1-1.fna.fbcdn.net/v/t39.30808-6/347379080_599726065243657_5650234923467051438_n.jpg?_nc_cat=107&ccb=1-7&_nc_sid=6ee11a&_nc_ohc=FsIyfQ_ilsYQ7kNvwFzTGfu&_nc_oc=Adl5Hy-_lZqxBxKHyWf3EQWuPs4AXia5c5NqSxqqmGi-SaTaOFdkPFwQP4_SxxdDfyYFsD6igiVWW76qREJAus-Y&_nc_zt=23&_nc_ht=scontent.fktm1-1.fna&_nc_gid=3Fy9O_TRhz8s75a9bFH2Cw&oh=00_AfQ8YxJnH9Y0ibTKKTfbeVJhM_F2UeEA97N4sLNdh3b4Rg&oe=6872B8B7" alt="Ashim Poudel" id="about-photo">
+                    <img src="mypic.jpg" alt="Ashim Poudel" id="about-photo">
                 </div>
                 <div class="about-text" data-aos="fade-left">
                     <!-- EDIT: Customize your bio text here -->
